--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,18 +13,20 @@
     {% include tag_cloud.html %}
   </section>
 
-  <section class="instagram-widget">
-    <a href="https://instagram.com/karmelalla" target="_blank">
-      <h4><img src="/assets/images/instagram.png" class="icon">Instagram (@karmelalla)</h4>
-    </a>
-    <div class="instagram-wrapper">
-      <img class="ratio" src="https://placehold.it/1x1/ffffff"/>
-      <iframe src="https://lightwidget.com/widgets/e406d2d089835e6b992ece7f8418f050.html" scrolling="no" class="lightwidget-widget"></iframe>
+  {% if site.instagram_username %}
+    <section class="instagram-widget">
       <a href="https://instagram.com/karmelalla" target="_blank">
-        <div class="instagram-link"></div>
+        <h4><img src="/assets/images/instagram.png" class="icon">Instagram (@karmelalla)</h4>
       </a>
-    </div>
-  </section>
+      <div class="instagram-wrapper">
+        <img class="ratio" src="https://placehold.it/1x1/ffffff"/>
+        <iframe src="https://lightwidget.com/widgets/e406d2d089835e6b992ece7f8418f050.html" scrolling="no" class="lightwidget-widget"></iframe>
+        <a href="https://instagram.com/karmelalla" target="_blank">
+          <div class="instagram-link"></div>
+        </a>
+      </div>
+    </section>
+  {% endif %}
 
   <section class="facebook-widget">
     <a href="https://www.facebook.com/allaiphoto" target="_blank">
